[project]
name = "codebase-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.17",
    "langchain>=0.3.18",
    "neo4j>=5.28.1",
    "networkx>=3.4.2",
    "openai>=1.63.0",
    "py2neo>=2021.2.4",
    "skforecast>=0.14.0",
    "tiktoken>=0.9.0",
    "jedi>=0.19.2",
    "pyright>=1.1.394",
    "libcst>=1.6.0",
    "pydot>=3.0.4",
    "pyan3==1.1.1",
    "langchain-neo4j>=0.3.0",
    "langchain-openai>=0.3.6",
]
